typed-i18n/tests/compile-fail/language_not_known.stderr
error: language se key hello is not known
 --> tests/compile-fail/language_not_known.rs:4:1
  |
4 | #[typed_i18n(filename = "tests/compile-fail/language_not_known.lrc")]
  | ^
